[gd_scene load_steps=13 format=3 uid="uid://dkie3md1cmsip"]

[ext_resource type="Theme" uid="uid://by44nnjeu6u4n" path="res://addons/cogito/Theme/Cogito_Theme_A.tres" id="1_1djt0"]
[ext_resource type="Script" uid="uid://c6ls4n4b776iy" path="res://addons/cogito/EasyMenus/Scripts/pause_menu_controller.gd" id="2_473pa"]
[ext_resource type="AudioStream" uid="uid://cr3bcp0u6w1pl" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/mouseclick1.ogg" id="3_cekij"]
[ext_resource type="AudioStream" uid="uid://kbw2s407quul" path="res://addons/cogito/Assets/Audio/Kenney/UiAudio/click1.ogg" id="4_ccwo8"]
[ext_resource type="Texture2D" uid="uid://tjkesqff2f4g" path="res://addons/cogito/Assets/Graphics/EmptySaveSlot.png" id="5_18sdt"]
[ext_resource type="Script" uid="uid://bg6tmerhavxb3" path="res://addons/cogito/Theme/CogitoUiButton.gd" id="6_a8sll"]
[ext_resource type="Shader" uid="uid://wn6mnfchf1w7" path="res://addons/cogito/Assets/Shader/BlurShader.tres" id="6_fg7i3"]
[ext_resource type="PackedScene" uid="uid://bly6wti1q8bsu" path="res://addons/cogito/EasyMenus/Scenes/OptionsTabMenu.tscn" id="6_xdpcn"]
[ext_resource type="Script" uid="uid://dyiaeif1d4pmo" path="res://addons/cogito/Scripts/menu_scene_switcher.gd" id="12_4c47n"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8kcia"]
shader = ExtResource("6_fg7i3")
shader_parameter/BlurStrength = 0.7

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_gjw0g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3a44o"]

[node name="PauseMenu" type="Control" node_paths=PackedStringArray("nodes_to_focus")]
process_mode = 3
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1djt0")
script = ExtResource("2_473pa")
nodes_to_focus = [NodePath("Content/GameMenu/VBoxContainer/ResumeGameButton")]
sound_hover = ExtResource("3_cekij")
sound_click = ExtResource("4_ccwo8")
empty_slot_texture = ExtResource("5_18sdt")

[node name="BlurBG" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_8kcia")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_gjw0g")

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Content" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15

[node name="PauseMenuLabel" type="Label" parent="Content"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Pause Menu"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="Content"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="GameMenu" type="MarginContainer" parent="Content"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 0
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="Content/GameMenu"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ResumeGameButton" type="Button" parent="Content/GameMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Resume"
script = ExtResource("6_a8sll")

[node name="HSeparator" type="HSeparator" parent="Content/GameMenu/VBoxContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 10

[node name="Separator_PanelContainer" type="PanelContainer" parent="Content/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3a44o")

[node name="Label_ActiveSlot" type="Label" parent="Content/GameMenu/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Current Slot: ?"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="Content/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(130, 160)
layout_mode = 2
theme = ExtResource("1_1djt0")
theme_type_variation = &"HUDPanel"

[node name="MarginContainer" type="MarginContainer" parent="Content/GameMenu/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Content/GameMenu/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Screenshot_Spot" type="TextureRect" parent="Content/GameMenu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("5_18sdt")
expand_mode = 1
stretch_mode = 5

[node name="Label_SaveTime2" type="Label" parent="Content/GameMenu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Last save:"
horizontal_alignment = 1

[node name="Label_SaveTime" type="Label" parent="Content/GameMenu/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "YYYY-MM-DD HH:MM"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Content/GameMenu/VBoxContainer"]
layout_mode = 2

[node name="LoadButton" type="Button" parent="Content/GameMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Load"
script = ExtResource("6_a8sll")

[node name="SaveButton" type="Button" parent="Content/GameMenu/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Save"
script = ExtResource("6_a8sll")

[node name="Separator_PanelContainer2" type="PanelContainer" parent="Content/GameMenu/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_3a44o")

[node name="OptionsButton" type="Button" parent="Content/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Options"
script = ExtResource("6_a8sll")

[node name="BackToMenuButton" type="Button" parent="Content/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Back to Main Menu"
script = ExtResource("6_a8sll")

[node name="QuitButton" type="Button" parent="Content/GameMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
text = "Quit"
script = ExtResource("6_a8sll")

[node name="OptionsTabMenu" parent="Content" instance=ExtResource("6_xdpcn")]
visible = false
layout_mode = 2

[node name="MenuSceneSwitcher" type="Node" parent="."]
script = ExtResource("12_4c47n")
main_menu_scene = "res://addons/cogito/DemoScenes/COGITO_0_MainMenu.tscn"

[connection signal="back_to_main_pressed" from="." to="MenuSceneSwitcher" method="_on_pause_menu_back_to_main_pressed"]
[connection signal="pressed" from="Content/GameMenu/VBoxContainer/ResumeGameButton" to="." method="_on_resume_game_button_pressed"]
[connection signal="pressed" from="Content/GameMenu/VBoxContainer/HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="Content/GameMenu/VBoxContainer/HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="Content/GameMenu/VBoxContainer/OptionsButton" to="." method="open_options_menu"]
[connection signal="pressed" from="Content/GameMenu/VBoxContainer/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="pressed" from="Content/GameMenu/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
